# autoban

./: .gitignore  Cargo.toml  config.toml  workspace.code-workspace
crates/rust-qqwry/src/: lib.rs
example/: lib.rs
src/: assets.rs  config.rs  database.rs  func.rs  lib.rs  main.rs
src/database/: query.rs
src/filer_service/: mod.rs  service.rs
src/server/: handlers.rs  mod.rs  server.rs
src/utils/: iferror.rs  mod.rs
web/: index.html
