[package]
name = "autoban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "autoban"
test = false
bench = false

[features]

#[badges]
#codecov = { repository = "djc/quinn" }
#maintenance = { status = "experimental" }

[dependencies]
axum = {version ="0.6.20", features = ["headers"]}
#axum =  { git = "https://github.com/tokio-rs/axum", branch = "main" , features = ["headers"]}
url="2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
iptables = "0.5.0"
nftables = "0.2.4"
local-ip-address = "0.5.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

log = "0.4"
env_logger = "0.10.0"


#[dev-dependencies]


#[dependencies]
#tokio = { version = "^1.6", features = ["full","rt-multi-thread"] }
#quiche = "0.17.2"
#quinn = "0.10.1"
#bench_tools = { version = "0.1.1", path = "./crates/bench_tools" }