[package]
name = "autoban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "autoban"
test = false
bench = false

[features]

#[badges]
#codecov = { repository = "djc/quinn" }
#maintenance = { status = "experimental" }

[dependencies]

clap = { version = "4.2" }
axum = {version ="0.6.20", features = ["headers"]}
#axum =  { git = "https://github.com/tokio-rs/axum", branch = "main" , features = ["headers"]}
#grep = "0.2.12"
cron = "0.12.0"
url="2.4.0"
toml = "0.7.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
iptables = "0.5.0"
nftables = "0.2.4"
#cidr-utils =  { version = "0.5.10", features = ["serde"] }
local-ip-address = "0.5.4"
ctrlc = "3.4.1"
tower = "0.4.13"
tower-http= { version = "0.3.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
qqwry={version = "0.1.0", path = "./crates/rust-qqwry"}
sqlite = "0.31.1"

log = "0.4"
env_logger = "0.10.0"

[dependencies.cidr-utils]
version = "*"
features = ["serde"]


#[dev-dependencies]


#[dependencies]
#tokio = { version = "^1.6", features = ["full","rt-multi-thread"] }
#quiche = "0.17.2"
#quinn = "0.10.1"
#bench_tools = { version = "0.1.1", path = "./crates/bench_tools" }